# pfsense-netbox-sync

./: Changelog.md  README.md  pyproject.toml  requirements.txt
.forgejo/workflows/: ci.yaml
app/: __main__.py
pfsense_netbox_sync/: __init__.py
