[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pfsense-netbox-sync"
version = "0.1.0"
authors = [
    { name = "Aloïs Micard", email = "alois@micard.lu" },
]
description = "Allows to synchronize NetBox IPAM DNS information to a pfSense instance"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[license]
file = 'LICENSE.txt'

[project.urls]
Homepage = "https://git.creekorful.cloud/creekorful/pfsense-netbox-sync"
Issues = "https://git.creekorful.cloud/creekorful/pfsense-netbox-sync/issues"